# SpruceOS

./: Cargo.toml  README.md  buildrun.bat  run_tests.bat  x86_64-spruce-os.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/cli/: basic_cli.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  test skeleton.txt
