[package]
name = "SpruceOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
bootloader = "0.9.23"
getrandom = { version = "0.1.14", features = ["dummy"] }
volatile = "0.2.6"
x86_64 = "0.14.11"
uart_16550 = "0.3.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300                  # (in seconds)

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false